--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="stylesheet" type="text/css" href="styles/default.css" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>von Briesen's Validating WEB Template</title>
+    <title>Chris Li's webpage</title>
 
     <!--
         Structure of HTML5 semantic layout swiped from PHP Fiddle and modified
@@ -43,12 +43,12 @@
         Bazzom bazang... we do the bestest!
         <br />Designed by &copy;Icabad Enterprises
         <br />
-        <a href="http://validator.w3.org/check?uri=referer" style="text-decoration: none">
+        <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fkwisssummers.github.io%2FITCS3135.io%2F" style="text-decoration: none">
             <img src="images/validation_button_html-blue.png" alt="Validate HTML" />
         </a>
         <!-- you may need to change the name of your image link to match the one you
         uploaded -->
-        <a href="http://jigsaw.w3.org/css-validator/check/referer" style="text-decoration: none">
+        <a href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Fkwisssummers.github.io%2FITCS3135.io%2F&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en" style="text-decoration: none">
             <img src="images/validation_button_css-blue.png" alt="Validate CSS" />
         </a>
     </footer>
