--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         Bazzom bazang... we do the bestest!
         <br />Designed by &copy;Icabad Enterprises
         <br />
-        <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fkwisssummers.github.io%2FITCS3135%2F" style="text-decoration: none">
+        <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fkwisssummers.github.io%2FITCS3135" style="text-decoration: none">
             <img src="images/validation_button_html-blue.png" alt="Validate HTML" />
         </a>
         <!-- you may need to change the name of your image link to match the one you
