--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <link rel="stylesheet" type="text/css" href="styles/default.css" />
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Chris Li's webpage</title>
+    <title>Chris Li's course webpage</title>
 
     <!--
         Structure of HTML5 semantic layout swiped from PHP Fiddle and modified
