--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <!--Title, name, mascot, course id, page name-->
     <title>Chris Li's Cozy labrador | ITCS3135 | Home</title>
+    <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
