--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!-- Meta info and style sheet-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="styles/default.css" />
+    <link rel="stylesheet" type="text/css" href="styles/default.css">
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;700&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 
     <!--Title, name, mascot, course id, page name-->
@@ -31,7 +31,7 @@
         <h2>Welcome to Chris Li's ITCS3135 Webpage!</h2>
         <p>This is the homepage of my course webpage. Navigate using the menu!</p>
         <figure>
-            <img src="images/cozylabrador.png" alt="Chris Li's Cozy Labrador Mascot" />
+            <img src="images/cozylabrador.png" alt="Chris Li's Cozy Labrador Mascot">
             <figcaption>A Cozy Labrador is the mascot of my page</figcaption>
         </figure>
     </main>
