--- a/contract.html
+++ b/contract.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chris Li’s Cozy Labrador | ITCS3135 | Contract</title>
+    <title>Chris Li’s Cozy Labrador | ITIS3135 | Contract</title>
     <link rel="stylesheet" type="text/css" href="styles/default.css">
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;700&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
@@ -12,7 +12,7 @@
 
     <!--Header content-->
     <header>
-        <h1>Chris Li’s Cozy Labrador | ITCS3135</h1>
+        <h1>Chris Li’s Cozy Labrador | ITIS3135</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -25,11 +25,11 @@
 
     <!--Main Content-->
     <main>
-        <h2>ITCS3135 Course Contract</h2>
-        <p>Welcome to the Contract page for ITCS3135. </p>
+        <h2>ITIS3135 Course Contract</h2>
+        <p>Welcome to the Contract page for ITIS3135. </p>
         <h2>Course Contract</h2>
         <p>
-            I, <a href="introductions.html">Chris Li</a>, agree to abide by the terms of the course contract in my Spring 2025, ITCS3135, Web Development with my instructor, Professor D.I. von Briesen.
+            I, <a href="introductions.html">Chris Li</a>, agree to abide by the terms of the course contract in my Spring 2025, ITIS3135, Web Development with my instructor, Professor D.I. von Briesen.
         </p>
         <p>
             I understand that all work I do on publicly available online tools will be available to the world, and I will not put information there that is inappropriate for schoolwork or that I wish to keep private.
@@ -46,7 +46,7 @@
         <ul>
             <li><a href="https://webpages.charlotte.edu/cli36/">CLT WEB</a></li>
             <li><a href="https://kwisssummers.github.io/">GitHub</a></li>
-            <li><a href="https://kwisssummers.github.io/itcs3135/">Course Github.io</a></li>
+            <li><a href="https://kwisssummers.github.io/itis3135/">Course Github.io</a></li>
             <li><a href="https://www.freecodecamp.org/ChrisLi">FreeCodeCamp Profile</a></li>
             <li><a href="https://www.codecademy.com/profiles/Cli36">Codecademy Profile</a></li>
             <li><a href="https://www.linkedin.com/in/chris4li/">LinkedIn Profile</a></li>
