--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;700&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
 
     <!--Title, name, mascot, course id, page name-->
-    <title>Chris Li's Cozy labrador | ITCS3135 | Home</title>
+    <title>Chris Li's Cozy labrador | ITIS3135 | Home</title>
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <header>
-        <h1>Chris Li's Cozy Labrador | ITCS3135</h1>
+        <h1>Chris Li's Cozy Labrador | ITIS3135</h1>
         <!--Nav Bar-->
         <nav>
             <ul> <!-- Changed from <u1> to <ul> -->
@@ -28,7 +28,7 @@
 
     <!--Main Content-->
     <main>
-        <h2>Welcome to Chris Li's ITCS3135 Webpage!</h2>
+        <h2>Welcome to Chris Li's ITIS3135 Webpage!</h2>
         <p>This is the homepage of my course webpage. Navigate using the menu!</p>
         <figure>
             <img src="images/cozylabrador.png" alt="Chris Li's Cozy Labrador Mascot">
@@ -41,7 +41,7 @@
         <ul> <!-- Changed from <u1> to <ul> -->
             <li><a href="https://webpages.charlotte.edu/cli36/">CLT WEB</a></li>
             <li><a href="https://kwisssummers.github.io/">GitHub</a></li>
-            <li><a href="https://kwisssummers.github.io/itcs3135/">Course Github.io</a></li>
+            <li><a href="https://kwisssummers.github.io/itis3135/">Course Github.io</a></li>
             <li><a href="https://www.freecodecamp.org/ChrisLi">FreeCodeCamp Profile</a></li>
             <li><a href="https://www.codecademy.com/profiles/Cli36">Codecademy Profile</a></li>
             <li><a href="https://www.linkedin.com/in/chris4li/">LinkedIn Profile</a></li>
