--- a/introductions.html
+++ b/introductions.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chris Li’s Cozy Labrador | ITCS3135 | Introduction</title>
+    <title>Chris Li’s Cozy Labrador | ITIS3135 | Introduction</title>
     <link rel="stylesheet" type="text/css" href="styles/default.css">
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;700&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
@@ -11,7 +11,7 @@
 <body>
     <!--Header-->
     <header>
-        <h1>Chris Li’s Cozy Labrador | ITCS3135</h1>
+        <h1>Chris Li’s Cozy Labrador | ITIS3135</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -57,7 +57,7 @@
         <ul>
             <li><a href="https://webpages.charlotte.edu/cli36/">CLT WEB</a></li>
             <li><a href="https://kwisssummers.github.io/">GitHub</a></li>
-            <li><a href="https://kwisssummers.github.io/itcs3135/">Course Github.io</a></li>
+            <li><a href="https://kwisssummers.github.io/itis3135/">Course Github.io</a></li>
             <li><a href="https://www.freecodecamp.org/ChrisLi">FreeCodeCamp Profile</a></li>
             <li><a href="https://www.codecademy.com/profiles/Cli36">Codecademy Profile</a></li>
             <li><a href="https://www.linkedin.com/in/chris4li/">LinkedIn Profile</a></li>
