--- a/introductions.html
+++ b/introductions.html
@@ -27,7 +27,7 @@
         <h2>Introduction</h2>
 
         <figure>
-            <img src="images/chrispfp2025.jpg" alt="Chris Li" />
+            <img src="images/chrispfp2025.jpg" alt="Chris Li">
             <figcaption>Tis I- Chris</figcaption>
         </figure>
 
@@ -38,7 +38,7 @@
             <li><strong>Academic Background:</strong> I'm a Computer Science major with a concentration in AI, Robotics and Game Design. I took a extremely large variety of courses in my academic career including fine and performing arts, sports medicine, various sciences, business, psychology and much more.</li>
             <li><strong>Background in this Subject:</strong> My current experience in web development is still limited, but I'm excited to learn more.</li>
             <li><strong>Primary Computer Platform:</strong> Windows 11, Alienware M15 r4, RTX 3070.</li>
-            <li><strong>Courses I’m Taking this semester & Why:</strong>
+            <li><strong>Courses I’m Taking this semester and Why:</strong>
                 <ul>
                     <li>Advanced Game Design: I love video games and likeminded individuals</li>
                     <li>Machine Learning: I believe learning about machine learning will prove to be a essential skill for future use.</li>
