--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         <nav>
             <ul> <!-- Changed from <u1> to <ul> -->
                 <li><a href="index.html">Home</a></li>
+                <li><a href="https://webpages.charlotte.edu/cli36/itis3135/about.html">About</a></li>
                 <li><a href="introductions.html">Introductions</a></li>
                 <li><a href="contract.html">Contract</a></li>
                 <li><a href="https://uncc.edu">UNCC Home</a></li>
