--- a/introductions.html
+++ b/introductions.html
@@ -15,6 +15,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
+                <li><a href="https://webpages.charlotte.edu/cli36/itis3135/about.html">About</a></li>
                 <li><a href="introductions.html">Introduction</a></li>
                 <li><a href="contract.html">Contract</a></li>
                 <li><a href="https://uncc.edu/">UNCC Home</a></li>
