--- a/contract.html
+++ b/contract.html
@@ -12,7 +12,7 @@
 
 <body onload="includeHTML();">
     <!-- Dynamically load header -->
-    <div w3-include-html="components/header.html"></div>
+    <div data-include="components/header.html"></div>
 
     <!--Main Content-->
     <main>
@@ -34,7 +34,7 @@
     </main>
 
      <!-- Dynamically load footer -->
-     <div w3-include-html="components/footer.html"></div>
+     <div data-include="components/footer.html"></div>
 
      <!-- JavaScript to dynamically update validation links -->
      <script>
