--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body onload="includeHTML();">
     <!-- Dynamically load header -->
-    <div w3-include-html="components/header.html"></div>
+    <div data-include="components/header.html"></div>
 
     <!-- Main Content-->
     <main>
@@ -28,7 +28,7 @@
     </main>
 
     <!-- Dynamically load footer -->
-    <div w3-include-html="components/footer.html"></div>
+    <div data-include="components/footer.html"></div>
 
     <!-- JavaScript to dynamically update validation links -->
     <script>
