--- a/index.html
+++ b/index.html
@@ -32,11 +32,18 @@
 
     <!-- JavaScript to dynamically update validation links -->
     <script>
-        document.getElementById("validation_link_html").setAttribute("href", 
-        "https://validator.w3.org/check?uri=" + location.href);
+        // Ensure the page content is fully loaded before executing the script
+        window.addEventListener('load', function () {
+            // Wait for HTMLInclude to load content
+            includeHTML();
 
-        document.getElementById("validation_link_css").setAttribute("href", 
-        "https://jigsaw.w3.org/css-validator/validator?uri=" + location.href);
+            // Update validation links after the page has loaded
+            document.getElementById("validation_link_html").setAttribute("href", 
+                "https://validator.w3.org/check?uri=" + location.href);
+
+            document.getElementById("validation_link_css").setAttribute("href", 
+                "https://jigsaw.w3.org/css-validator/validator?uri=" + location.href);
+        });
     </script>
 </body>
 </html>
