--- a/index.html
+++ b/index.html
@@ -1,23 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- Meta info and style sheet-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Chris Li’s Cozy Labrador | ITIS3135 | Home</title>
     <link rel="stylesheet" type="text/css" href="styles/default.css">
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;700&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
-
-    <!-- Title, name, mascot, course id, page name-->
-    <title>Chris Li's Cozy Labrador | ITIS3135 | Home</title>
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
-    <script src="scripts/HTMLInclude.js"></script>
+    <script src="scripts/HTMLInclude.js"></script> <!-- Ensure this is loaded -->
 </head>
 
-<body onload="includeHTML();">
+<body>
     <!-- Dynamically load header -->
     <div data-include="components/header.html"></div>
 
-    <!-- Main Content-->
+    <!-- Main Content -->
     <main>
         <h2>Welcome to Chris Li's ITIS3135 Webpage!</h2>
         <p>This is the homepage of my course webpage. Navigate using the menu!</p>
@@ -35,7 +32,7 @@
         // Ensure the page content is fully loaded before executing the script
         window.addEventListener('load', function () {
             // Wait for HTMLInclude to load content
-            includeHTML();
+            includeHTML();  // Call the function to load the header and footer
 
             // Update validation links after the page has loaded
             document.getElementById("validation_link_html").setAttribute("href", 
