--- a/introductions.html
+++ b/introductions.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="styles/default.css">
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;700&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
-    <script src="scripts/HTMLInclude.js"></script>
+    <script src="scripts/HTMLInclude.js"></script> <!-- Ensure the script is loaded -->
 </head>
 
 <body>
@@ -25,19 +25,19 @@
 
         <p>Welcome to my introduction page!</p>
         <ul>
-            <li><strong>Personal Background:</strong> I grew up in Charlotte NC. I'm a huge gamer, l like learning, going to the gym, psychology, and the fine/performing arts.</li>
-            <li><strong>Professional Background:</strong> I worked as a YMCA Art Camp Counselor, a host and server at a couple restaurants, and more recently as a AI trainer.</li>
-            <li><strong>Academic Background:</strong> I'm a Computer Science major with a concentration in AI, Robotics and Game Design. I took a extremely large variety of courses in my academic career including fine and performing arts, sports medicine, various sciences, business, psychology and much more.</li>
+            <li><strong>Personal Background:</strong> I grew up in Charlotte NC. I'm a huge gamer, I like learning, going to the gym, psychology, and the fine/performing arts.</li>
+            <li><strong>Professional Background:</strong> I worked as a YMCA Art Camp Counselor, a host and server at a couple restaurants, and more recently as an AI trainer.</li>
+            <li><strong>Academic Background:</strong> I'm a Computer Science major with a concentration in AI, Robotics, and Game Design. I took an extremely large variety of courses in my academic career, including fine and performing arts, sports medicine, various sciences, business, psychology, and much more.</li>
             <li><strong>Background in this Subject:</strong> My current experience in web development is still limited, but I'm excited to learn more.</li>
             <li><strong>Primary Computer Platform:</strong> Windows 11, Alienware M15 r4, RTX 3070.</li>
             <li><strong>Courses I’m Taking this semester and Why:</strong>
                 <ul>
                     <li>Advanced Game Design: I love video games and likeminded individuals</li>
-                    <li>Machine Learning: I believe learning about machine learning will prove to be a essential skill for future use.</li>
+                    <li>Machine Learning: I believe learning about machine learning will prove to be an essential skill for future use.</li>
                     <li>American Culture: Being aware of the country's social environment is important.</li>
                     <li>American Film: Film is a handy class to pick up knowledge about what touches the hearts of the people.</li>
                     <li>Web Design: Web Design seems to be a general skill that may come in handy for all around use.</li>
-                    <li>Object Oriented Progamming: Many systems use object oriented programming, and the skill may come in especially handy in game development.</li>
+                    <li>Object Oriented Programming: Many systems use object-oriented programming, and the skill may come in especially handy in game development.</li>
                 </ul>
             </li>
             <li><strong>Interesting thing about me:</strong> I love video game theorycrafting and thinking up of ways different systems can interact with one another!</li>
@@ -54,7 +54,7 @@
         // Ensure the page content is fully loaded before executing the script
         window.addEventListener('load', function () {
             // Wait for HTMLInclude to load content
-            includeHTML();
+            includeHTML();  // Load the header and footer dynamically
 
             // Update validation links after the page has loaded
             document.getElementById("validation_link_html").setAttribute("href", 
