--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Chris Li’s Cozy Labrador | ITIS3135 | Home</title>
     <link rel="stylesheet" type="text/css" href="styles/default.css">
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;700&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+    <script src="scripts/HTMLInclude.js"></script> <!-- Ensure this is loaded first -->
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
-    <script src="scripts/HTMLInclude.js"></script> <!-- Ensure this is loaded -->
 </head>
 
 <body>
@@ -32,7 +32,7 @@
         // Ensure the page content is fully loaded before executing the script
         window.addEventListener('load', function () {
             // Wait for HTMLInclude to load content
-            includeHTML();  // Call the function to load the header and footer
+            includeHTML();  // Load the header and footer dynamically
 
             // Update validation links after the page has loaded
             document.getElementById("validation_link_html").setAttribute("href", 
