--- a/contract.html
+++ b/contract.html
@@ -6,8 +6,8 @@
     <title>Chris Li’s Cozy Labrador | ITIS3135 | Contract</title>
     <link rel="stylesheet" type="text/css" href="styles/default.css">
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;700&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+    <script src="scripts/HTMLInclude.js"></script> <!-- Ensure this is loaded first -->
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
-    <script src="scripts/HTMLInclude.js"></script> <!-- Ensure the script is loaded -->
 </head>
 
 <body>
