--- a/introductions.html
+++ b/introductions.html
@@ -12,7 +12,7 @@
 
 <body>
     <!-- Dynamically load header -->
-    <div w3-include-html="components/header.html"></div>
+    <div data-include="components/header.html"></div>
 
     <!-- Main Content -->
     <main>
@@ -45,12 +45,6 @@
         </ul>
 
     </main>
-<<<<<<< HEAD
-=======
-     <!-- Dynamically load footer -->
-     <div w3-include-html="components/footer.html"></div>
->>>>>>> parent of 3688164 (revised dynamic headers/footers)
-
     <!-- Dynamically load footer -->
     <div data-include="components/footer.html"></div>
 
