--- a/contract.html
+++ b/contract.html
@@ -10,7 +10,7 @@
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </head>
 
-<body>
+<body onload="includeHTML();"> <!-- Call includeHTML directly on onload -->
     <!-- Dynamically load header -->
     <div data-include="components/header.html"></div>
 
@@ -38,18 +38,11 @@
 
     <!-- JavaScript to dynamically update validation links -->
     <script>
-        // Ensure the page content is fully loaded before executing the script
-        window.addEventListener('load', function () {
-            // Wait for HTMLInclude to load content
-            includeHTML();  // Load the header and footer dynamically
+        document.getElementById("validation_link_html").setAttribute("href", 
+            "https://validator.w3.org/check?uri=" + location.href);
 
-            // Update validation links after the page has loaded
-            document.getElementById("validation_link_html").setAttribute("href", 
-                "https://validator.w3.org/check?uri=" + location.href);
-
-            document.getElementById("validation_link_css").setAttribute("href", 
-                "https://jigsaw.w3.org/css-validator/validator?uri=" + location.href);
-        });
+        document.getElementById("validation_link_css").setAttribute("href", 
+            "https://jigsaw.w3.org/css-validator/validator?uri=" + location.href);
     </script>
 </body>
 </html>
