updated index to have link to CRAPPY webpage

--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
     <!-- Dynamically load header -->
     <div data-include="components/header.html"></div>
 
+    <!-- Separate Nav for Crappy Webpage -->
+    <nav id="crappy-nav">
+        <ul>
+            <li><a href="stuff/CRAPPY%20webpage-lmao!.html">CRAPPY Webpage</a></li>
+        </ul>
+    </nav>
+
     <!-- Main Content -->
     <main>
         <h2>Welcome to Chris Li's ITIS3135 Webpage!</h2>
