added website evaluations, updated navbars

--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
     <!-- Dynamically load header -->
     <div data-include="components/header.html"></div>
 
-    <!-- Separate Nav for Crappy Webpage -->
-    <nav id="crappy-nav">
+    <!-- Separate Nav for "other" Webpages -->
+    <nav id="other-nav">
         <ul>
             <li><a href="stuff/CRAPPY%20webpage-lmao!.html">CRAPPY Webpage</a></li>
+            <li><a href="website_evaluations.html">Website Evaluations</a></li>
         </ul>
     </nav>
 
