--- a/contract.html
+++ b/contract.html
@@ -14,6 +14,14 @@
     <!-- Dynamically load header -->
     <div data-include="components/header.html"></div>
 
+    <!-- Separate Nav for "other" Webpages -->
+    <nav id="other-nav">
+        <ul>
+            <li><a href="stuff/CRAPPY%20webpage-lmao!.html">CRAPPY Webpage</a></li>
+            <li><a href="website_evaluations.html">Website Evaluations</a></li>
+        </ul>
+    </nav>
+
     <!-- Main Content -->
     <main>
         <h2>ITIS3135 Course Contract</h2>
