--- a/introductions.html
+++ b/introductions.html
@@ -13,6 +13,14 @@
 <body>
     <!-- Dynamically load header -->
     <div data-include="components/header.html"></div>
+    
+    <!-- Separate Nav for "other" Webpages -->
+    <nav id="other-nav">
+        <ul>
+            <li><a href="stuff/CRAPPY%20webpage-lmao!.html">CRAPPY Webpage</a></li>
+            <li><a href="website_evaluations.html">Website Evaluations</a></li>
+        </ul>
+    </nav>
 
     <!-- Main Content -->
     <main>
