--- a/introductions.html
+++ b/introductions.html
@@ -19,6 +19,7 @@
         <ul>
             <li><a href="stuff/CRAPPY%20webpage-lmao!.html">CRAPPY Webpage</a></li>
             <li><a href="website_evaluations.html">Website Evaluations</a></li>
+            <li><a href="tables.html">HTML Tables</a></li>
         </ul>
     </nav>
 
