--- a/contract.html
+++ b/contract.html
@@ -3,33 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chris Li’s Cozy Labrador | ITCS3135 | Contract</title>
+    <title>Chris Li’s Cozy Labrador | ITIS3135 | Contract</title>
     <link rel="stylesheet" type="text/css" href="styles/default.css">
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;700&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+    <script src="scripts/HTMLInclude.min.js"></script> <!-- Include HTMLInclude.js -->
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
+    <!-- Dynamically load header -->
+    <div data-include="components/header.html"></div>
 
-    <!--Header content-->
-    <header>
-        <h1>Chris Li’s Cozy Labrador | ITCS3135</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="introductions.html">Introduction</a></li>
-                <li><a href="contract.html">Contract</a></li>
-                <li><a href="https://uncc.edu/">UNCC Home</a></li>
-            </ul>
-        </nav>
-    </header>
+    <!-- Separate Nav for "other" Webpages -->
+    <nav id="other-nav">
+        <ul>
+            <li><a href="stuff/CRAPPY%20webpage-lmao!.html">CRAPPY Webpage</a></li>
+            <li><a href="website_evaluations.html">Website Evaluations</a></li>
+            <li><a href="tables.html">HTML Tables</a></li>
+        </ul>
+    </nav>
 
-    <!--Main Content-->
+    <!-- Main Content -->
     <main>
-        <h2>ITCS3135 Course Contract</h2>
-        <p>Welcome to the Contract page for ITCS3135. </p>
+        <h2>ITIS3135 Course Contract</h2>
+        <p>Welcome to the Contract page for ITIS3135. </p>
         <h2>Course Contract</h2>
         <p>
-            I, <a href="introductions.html">Chris Li</a>, agree to abide by the terms of the course contract in my Spring 2025, ITCS3135, Web Development with my instructor, Professor D.I. von Briesen.
+            I, <a href="introductions.html">Chris Li</a>, agree to abide by the terms of the course contract in my Spring 2025, ITIS3135, Web Development with my instructor, Professor D.I. von Briesen.
         </p>
         <p>
             I understand that all work I do on publicly available online tools will be available to the world, and I will not put information there that is inappropriate for schoolwork or that I wish to keep private.
@@ -42,17 +42,21 @@
         </p>
     </main>
 
-    <footer>
-        <ul>
-            <li><a href="https://webpages.charlotte.edu/cli36/">CLT WEB</a></li>
-            <li><a href="https://kwisssummers.github.io/">GitHub</a></li>
-            <li><a href="https://kwisssummers.github.io/itcs3135/">Course Github.io</a></li>
-            <li><a href="https://www.freecodecamp.org/ChrisLi">FreeCodeCamp Profile</a></li>
-            <li><a href="https://www.codecademy.com/profiles/Cli36">Codecademy Profile</a></li>
-            <li><a href="https://www.linkedin.com/in/chris4li/">LinkedIn Profile</a></li>
-        </ul>
-        <p>Designed by Chris Li Enterprises &copy; 2025</p>
-    </footer>
+    <!-- Dynamically load footer -->
+    <div data-include="components/footer.html"></div>
 
+    <!-- Run HTMLInclude to load header/footer dynamically -->
+    <script>
+        HTMLInclude();  // Dynamically load the header and footer content
+    </script>
+
+    <!-- JavaScript to dynamically update validation links -->
+    <script>
+        document.getElementById("validation_link_html").setAttribute("href", 
+            "https://validator.w3.org/check?uri=" + location.href);
+
+        document.getElementById("validation_link_css").setAttribute("href", 
+            "https://jigsaw.w3.org/css-validator/validator?uri=" + location.href);
+    </script>
 </body>
 </html>
