--- a/introductions.html
+++ b/introductions.html
@@ -3,49 +3,50 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chris Li’s Cozy Labrador | ITCS3135 | Introduction</title>
+    <title>Chris Li’s Cozy Labrador | ITIS3135 | Introduction</title>
     <link rel="stylesheet" type="text/css" href="styles/default.css">
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;700&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
+    <script src="scripts/HTMLInclude.min.js"></script> <!-- Include HTMLInclude.js -->
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </head>
-<body>
-    <!--Header-->
-    <header>
-        <h1>Chris Li’s Cozy Labrador | ITCS3135</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="introductions.html">Introduction</a></li>
-                <li><a href="contract.html">Contract</a></li>
-                <li><a href="https://uncc.edu/">UNCC Home</a></li>
-            </ul>
-        </nav>
-    </header>
 
-    <!--Main Content-->
+<body>
+    <!-- Dynamically load header -->
+    <div data-include="components/header.html"></div>
+    
+    <!-- Separate Nav for "other" Webpages -->
+    <nav id="other-nav">
+        <ul>
+            <li><a href="stuff/CRAPPY%20webpage-lmao!.html">CRAPPY Webpage</a></li>
+            <li><a href="website_evaluations.html">Website Evaluations</a></li>
+            <li><a href="tables.html">HTML Tables</a></li>
+        </ul>
+    </nav>
+
+    <!-- Main Content -->
     <main>
         <h2>Introduction</h2>
 
         <figure>
-            <img src="images/chrispfp2025.jpg" alt="Chris Li" />
+            <img src="images/chrispfp2025.jpg" alt="Chris Li">
             <figcaption>Tis I- Chris</figcaption>
         </figure>
 
         <p>Welcome to my introduction page!</p>
         <ul>
-            <li><strong>Personal Background:</strong> I grew up in Charlotte NC. I'm a huge gamer, l like learning, going to the gym, psychology, and the fine/performing arts.</li>
-            <li><strong>Professional Background:</strong> I worked as a YMCA Art Camp Counselor, a host and server at a couple restaurants, and more recently as a AI trainer.</li>
-            <li><strong>Academic Background:</strong> I'm a Computer Science major with a concentration in AI, Robotics and Game Design. I took a extremely large variety of courses in my academic career including fine and performing arts, sports medicine, various sciences, business, psychology and much more.</li>
+            <li><strong>Personal Background:</strong> I grew up in Charlotte NC. I'm a huge gamer, I like learning, going to the gym, psychology, and the fine/performing arts.</li>
+            <li><strong>Professional Background:</strong> I worked as a YMCA Art Camp Counselor, a host and server at a couple restaurants, and more recently as an AI trainer.</li>
+            <li><strong>Academic Background:</strong> I'm a Computer Science major with a concentration in AI, Robotics, and Game Design. I took an extremely large variety of courses in my academic career, including fine and performing arts, sports medicine, various sciences, business, psychology, and much more.</li>
             <li><strong>Background in this Subject:</strong> My current experience in web development is still limited, but I'm excited to learn more.</li>
             <li><strong>Primary Computer Platform:</strong> Windows 11, Alienware M15 r4, RTX 3070.</li>
-            <li><strong>Courses I’m Taking this semester & Why:</strong>
+            <li><strong>Courses I’m Taking this semester and Why:</strong>
                 <ul>
                     <li>Advanced Game Design: I love video games and likeminded individuals</li>
-                    <li>Machine Learning: I believe learning about machine learning will prove to be a essential skill for future use.</li>
+                    <li>Machine Learning: I believe learning about machine learning will prove to be an essential skill for future use.</li>
                     <li>American Culture: Being aware of the country's social environment is important.</li>
                     <li>American Film: Film is a handy class to pick up knowledge about what touches the hearts of the people.</li>
                     <li>Web Design: Web Design seems to be a general skill that may come in handy for all around use.</li>
-                    <li>Object Oriented Progamming: Many systems use object oriented programming, and the skill may come in especially handy in game development.</li>
+                    <li>Object Oriented Programming: Many systems use object-oriented programming, and the skill may come in especially handy in game development.</li>
                 </ul>
             </li>
             <li><strong>Interesting thing about me:</strong> I love video game theorycrafting and thinking up of ways different systems can interact with one another!</li>
@@ -53,16 +54,22 @@
         </ul>
 
     </main>
-    <footer>
-        <ul>
-            <li><a href="https://webpages.charlotte.edu/cli36/">CLT WEB</a></li>
-            <li><a href="https://kwisssummers.github.io/">GitHub</a></li>
-            <li><a href="https://kwisssummers.github.io/itcs3135/">Course Github.io</a></li>
-            <li><a href="https://www.freecodecamp.org/ChrisLi">FreeCodeCamp Profile</a></li>
-            <li><a href="https://www.codecademy.com/profiles/Cli36">Codecademy Profile</a></li>
-            <li><a href="https://www.linkedin.com/in/chris4li/">LinkedIn Profile</a></li>
-        </ul>
-        <p>Designed by Chris Li Enterprises &copy; 2025</p>
-    </footer>
+
+    <!-- Dynamically load footer -->
+    <div data-include="components/footer.html"></div>
+
+    <!-- Run HTMLInclude to load header/footer dynamically -->
+    <script>
+        HTMLInclude();  // Dynamically load the header and footer content
+    </script>
+
+    <!-- JavaScript to dynamically update validation links -->
+    <script>
+        document.getElementById("validation_link_html").setAttribute("href", 
+            "https://validator.w3.org/check?uri=" + location.href);
+
+        document.getElementById("validation_link_css").setAttribute("href", 
+            "https://jigsaw.w3.org/css-validator/validator?uri=" + location.href);
+    </script>
 </body>
 </html>
