--- a/introductions.html
+++ b/introductions.html
@@ -20,6 +20,7 @@
             <li><a href="stuff/CRAPPY%20webpage-lmao!.html">CRAPPY Webpage</a></li>
             <li><a href="website_evaluations.html">Website Evaluations</a></li>
             <li><a href="tables.html">HTML Tables</a></li>
+            <li><a href="hobby.html">Favorite Hobby</a></li>
         </ul>
     </nav>
 
