--- a/hobby.html
+++ b/hobby.html
@@ -213,7 +213,7 @@
       <p>Gaming is the activity of playing games, whether on consoles, PCs, mobile devices, or other means. It encompasses countless genres: from turn-based and role-playing epics to puzzle games and social simulators.</p>
       <p>It’s a form of entertainment, social interaction, and mental exercise, often providing immersive experiences that go beyond traditional hobbies. I personally believe gaming to be the peak art form.</p>
       <figure>
-        <img src="images/controller.jpeg" alt="PS5 controller on a table">
+        <img src="images/controller.jpg" alt="PS5 controller on a table">
         <figcaption>PS5 Game Controller</figcaption>
         <!-- If AI-generated, include an italic prompt below (example):
         <p><em>AI Prompt: "Photorealistic PS5 controller on a wooden surface"</em></p>
@@ -356,7 +356,8 @@
     // Hide/Show sections
     function showSection(sectionId) {
       const sections = document.querySelectorAll('main section');
-      sections.forEach(sec => {
+      sections.forEach((sec) => 
+      {
         sec.style.display = 'none';
       });
       document.getElementById(sectionId).style.display = 'block';
