--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <title>Chris Li’s Cozy Labrador | ITIS3135 | Home</title>
     <link rel="stylesheet" type="text/css" href="styles/default.css">
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;700&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
-    <script src="scripts/clude.min.js"></script> <!-- Include HTMLInclude.js -->
-    <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>HTMLIn
+    <script src="scripts/HTMLInclude.min.js"></script>
+    <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
 </head>
+
 
 <body>
     <!-- Dynamically load header -->
