--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <!-- Meta info and style sheet-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="styles/business.css">
+    <link rel="stylesheet" type="text/css" href="styles/default.css">
     <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;700&family=Poppins:wght@400;700&display=swap" rel="stylesheet">
     <script src="scripts/HTMLInclude.min.js"></script> <!-- Include HTMLInclude.js -->
     <script src="https://lint.page/kit/4d0fe3.js" crossorigin="anonymous"></script>
@@ -16,7 +16,7 @@
 <body>
     <!-- Dynamically load header -->
     <div data-include="components/header.html"></div>
-    
+
     <!-- Separate Nav for "other" Webpages -->
     <nav id="other-nav">
         <ul>
